--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <title>This is Your Granddaddy</title>
+    <link rel="stylesheet" type="text/css" href="this.css">
   </head>
   <body>
     <!-- Let's get it started in here-->
